Build with JDK 21
Also update to use JUnit 5.10.0

Closes #113